--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^12.1.0",
     "lamejs": "^1.2.1",
     "react": "^19.1.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
